[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/DialogueSystem/Dialoguebox.gd" type="Script" id=1]
[ext_resource path="res://Scripts/DialogueSystem/DialoguePlayer.gd" type="Script" id=2]
[ext_resource path="res://Fonts/GaramondPremrPro-Smbd.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Textures/UI/Frame.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 11
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="DialogueBox" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="NormalDialogue" type="Control" parent="."]
margin_right = 287.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortraitField" type="NinePatchRect" parent="NormalDialogue"]
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 4 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="NormalDialogue/PortraitField"]
margin_left = 3.0
margin_top = 3.0
margin_right = 45.0
margin_bottom = 45.0

[node name="DialogueField" type="NinePatchRect" parent="NormalDialogue"]
margin_left = 47.0
margin_right = 287.0
margin_bottom = 48.0
texture = ExtResource( 4 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueText" type="RichTextLabel" parent="NormalDialogue/DialogueField"]
margin_left = 5.0
margin_top = 10.0
margin_right = 235.0
margin_bottom = 43.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Placeholder"
text = "Placeholder"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameField" type="NinePatchRect" parent="NormalDialogue"]
margin_left = 55.0
margin_top = -8.0
margin_right = 111.0
margin_bottom = 8.0
texture = ExtResource( 4 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="RichTextLabel" parent="NormalDialogue/NameField"]
margin_left = 0.808769
margin_top = 2.89329
margin_right = 55.8088
margin_bottom = 12.8933
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Placeholder"
text = "Placeholder"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueChoice" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="DialogueChoice"]
margin_left = 0.132431
margin_right = 288.132
margin_bottom = 48.0
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialoguePlayer" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
